--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2218,6 +2218,22 @@ input, select, textarea {
 
 			}
 
+			.image.fig {
+				margin-top: 10px;
+				max-width: 100%; /* Ensures the image doesn't exceed the container's width */
+				width: auto; /* Allows the image to scale proportionally */
+			}
+			
+			.image.fig img {
+				display: block; /* Ensures the image is treated as a block element */
+				width: 100%; /* Makes the image fill its container's width */
+				height: auto; /* Allows the image to scale proportionally */
+			}
+			
+			.image.fig figcaption {
+				font-size: 14px; /* Example: Sets the font size of the caption */
+			}
+
 /* List */
 
 	ol {
@@ -3950,3 +3966,18 @@ input, select, textarea {
 			opacity: 1;
 			visibility: visible;
 		}
+
+.iframe-container {
+	position: relative;
+	width: 100%;
+	overflow: hidden;
+	padding-top: 56.25%; /* 16:9 aspect ratio (height: width) */
+}
+
+.iframe-container iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
