--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2361,7 +2361,7 @@ input, select, textarea {
 	ul.icons {
 		cursor: default;
 		list-style: none;
-		padding-left: 0;
+		padding-left: 3em;
 	}
 
 		ul.icons li {
@@ -3654,7 +3654,7 @@ input, select, textarea {
 
 			#contact > .inner > :nth-child(2n - 1) {
 				padding: 4em 3em 2em 0 ;
-				border-right: solid 1px rgba(212, 212, 255, 0.1);
+				/*border-right: solid 1px rgba(212, 212, 255, 0.1);*/
 				width: 60%;
 			}
 
